# primitivize

./: .gitignore  .project  Cargo.toml  LANGUAGE_SPEC.md  README.md  build.gradle  build.rs  cloudbuild.yaml  settings.gradle
.github/workflows/: ci.yml
examples/: 42.txt  critter-program.txt  readme-example.txt
rust-rewrite/: .gitignore  Cargo.toml  generate-grammar.sh  test.js
rust-rewrite/examples/: recursive-program.txt
rust-rewrite/src/: ast.rs  checker.rs  compiler.rs  evaluator.rs  inliner.rs  lowering.rs  main.rs  parser.rs  pl.lalrpop  renamer.rs  runtime.rs  transform.rs  transformer.rs  type_checker.rs
src/: ast.rs  checker.rs  compiler.rs  evaluator.rs  inliner.rs  main.rs  pl.lalrpop  renamer.rs  runtime.rs  transformer.rs
src/main/antlr/: PL.g4  PLLexerPart.g4
src/main/kotlin/: Main.kt
src/main/kotlin/com/developersam/primitivize/: Main.kt  Primitivizer.kt
src/main/kotlin/com/developersam/primitivize/codegen/: AstToCodeConverter.kt  CodeConvertible.kt  IdtQueue.kt  PrettyPrinter.kt
src/main/kotlin/com/developersam/primitivize/environment/: TypeEnv.kt
src/main/kotlin/com/developersam/primitivize/exceptions/: CompileTimeError.kt  DisallowedRuntimeFunctionError.kt  IdentifierError.kt  InvalidLiteralError.kt  UnexpectedTypeError.kt  WrongNumberOfArgsError.kt
src/main/kotlin/com/developersam/primitivize/lowering/: AstLoweringVisitor.kt  FunctionInliner.kt  VariableRenamingService.kt
src/main/kotlin/com/developersam/primitivize/parser/: ArgumentDeclarationsBuilder.kt  ExprBuilder.kt  ProgramBuilder.kt  TopLevelMemberBuilder.kt  (+1 more)
(+27 files in other folders)
