[package]
name = "critter-compiler"
version = "0.1.0"
authors = ["Sam <sam@developersam.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }
